# my-mcp

./: .env  .env-example  Dockerfile  README.md  main.py  pyproject.toml  scraper.py  smithery.yaml
docs/: accordion.txt  advance-range-slider.txt  advanced-select.txt  alert.txt  animation.txt  apex-charts.txt  avatar.txt  badge.txt  blockquote.txt  breadcrumb.txt  browser.txt  button.txt  card.txt  carousel.txt  chat-bubble.txt  checkbox.txt  clipboard.txt  code.txt  collapse.txt  combo-box.txt  context-menu.txt  copy-markup.txt  datamaps.txt  datatables.txt  diff.txt  divider.txt  drag-and-drop.txt  drawer.txt  dropdown.txt  editor.txt  file-input.txt  file-upload.txt  filter.txt  flatpickr.txt  footer.txt  form-validation.txt  form-wizard.txt  fullcalendar.txt  indicator.txt  input-number.txt  (+48 more)
docs/advanced-forms/: advanced-select.md  combo-box.md  copy-markup.md  form-wizard.md  input-number.md  pin-input.md  strong-password.md  toggle-count.md  toggle-password.md
docs/components/: accordion.md  alert.md  avatar.md  badge.md  button.md  card.md  carousel.md  chat-bubble.md  collapse.md  diff.md  indicator.md  list-group.md  loading.md  progress.md  radial-progress.md  remove-element.md  skeleton.md  stack.md  stat.md  status.md  swap.md  theme-controller.md  timeline.md  tree-view.md
docs/content/: blockquote.md  divider.md  keyboard.md  link.md  list.md  mask.md  typography.md
docs/customization/: base.md  colors.md  config.md  customize-components.md  icons.md  rtl.md  theme-generator.md  themes.md  utilities.md
docs/forms/: filter.md  (+9 more)
tools/: create_ui.py
(+56 files in other folders)
