[project]
name = "my-mcp"
version = "0.1.0"
description = "MCP server for FlyonUI component generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.9",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "mcp[cli]>=1.9.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.2",
]
