[project]
name = "my-mcp"
version = "0.1.0"
description = "MCP server for FlyonUI component generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.2",
]
